# rs-lox-compiler

./: .gitignore  Cargo.toml  README.md  bench.py  code.txt  generate_web.py  index.css  index.html  index.js  x.py  x.sh
.github/workflows/: fmt.yml  pages.yml
bench/: bench.lox  bench.py
compiler/: Cargo.toml
compiler/src/: chunk.rs  common.rs  compiler.rs  debug.rs  ffi.rs  fun.rs  function.rs  interner.rs  lib.rs  native.rs  scanner.rs  value.rs  vm.rs
docs/: index.css  index.html  index.js  wasm.js  wasm_bg.wasm  web_compiler.js  web_compiler_bg.wasm  worker.js
docs/sample_programs/: fib_iterative.lox  fib_recursive.lox  guess_game.lox  interactive.lox  merge_sort.lox  printf.lox  traceback.lox
include/: lox.h
lox-lang-support/: README.md  package.json
lox-lang-support/syntaxes/: lox.tmLanguage.json
native/: Cargo.toml  profile-build.sh
native-compiler/: Cargo.toml
native-compiler/src/: main.rs
native-modules/: build_modules.py  io.cpp  math.cpp
native-modules/fetch/: Cargo.toml  build.rs
native-modules/json/: Cargo.toml  (+1 more)
pkg/: web_compiler_bg.wasm
src/: chunk.rs  common.rs  compiler.rs  lib.rs  scanner.rs  snippet.js  value.rs  vm.rs
tests/: test_builtin_fetch.lox  test_builtin_io.lox  test_builtin_json.lox  test_builtin_kv.lox  test_builtin_math.lox  test_builtin_os.lox  test_builtin_time.lox  test_chr.lox  test_database.lox  test_escape.lox  test_fetch.lox  test_help.lox  test_io.lox  test_json.lox  test_map.lox  test_math.lox
wasm/: Cargo.toml
wasm/src/: lib.rs  snippet.js
web/: index.html  index.js  worker.js
web-compiler/: Cargo.toml
(+24 files in other folders)
