[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
console_log = "1.0.0"
log = "0.4.21"
num_enum = "0.7.2"
rustc-hash = "1.1.0"
strum_macros = "0.26.2"
web-time = "1.1.0"

[features]
tracing = []
print_code = []
