[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
compiler = {path = "../compiler", features = ["tracing", "print_code"]}
anyhow = { version = "1.0.81", features = ["backtrace"] }
console_log = "1.0.0"
log = "0.4.21"
num_enum = "0.7.2"
strum_macros = "0.26.2"
wasm-bindgen = "0.2.92"